@@ -68,7 +68,7 @@ export(minibar)
 export(padding)
 export(ph_with_flextable)
 export(ph_with_flextable_at)
-export(procFreq)
+export(proc_freq)
 export(regulartable)
 export(rotate)
 export(save_as_html)
